# vpn-namespace

./: .editorconfig  .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  nse.in  vpnns.install
aurtemplate/: PKGBUILD
configs/netns/: hosts.in  nsswitch.conf  resolv.conf
configs/nftables/: vpn-users.conf
configs/openvpn/: vpnns.conf.in
configs/sudoers.d/: vpnns.in
configs/tmpfiles.d/: vpnns.conf.in
route_up_hooks/: 50ready.sh.in
scripts/: dummy-ip  filesystem-checks.sh.in  functions.sh.in  move_to_default_ns.sh  openvpn.in  unpriv-ip  updown.sh.in
systemd/: openvpn-tuntap.service.in  openvpn-vpnns.service.in  vpnns-namespace.service.in
up_hooks/: 10dns.sh.in
